Programın UNBUG İşlemlerinin Yapılması
#24 Programın UNBUG işlemleri yapılıyor.

--- a/AracListe.resx
+++ b/AracListe.resx
@@ -117,4 +117,62 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ımageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="ımageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAANgsAAAJNU0Z0AUkBTAMBAQAB
+        CAEAAQgBAAEoAQABKAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAaADAAEoAwABAQEAASAGAAFkEgAD
+        NwGqAhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMB
+        EgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AhMBEgH/AzcBqv8A/wAy
+        AAITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wIcARsB
+        8P8A/wAyAAITARIB/wITARIB/wMyAb0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0D
+        OQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AyYBOv8A/wAyAAITARIB/wITARIB/wM5AX3/AP8AdgAC
+        EwESAf8CEwESAf8DOQF9/wD/AHYAAhMBEgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB/wM5AX3/
+        AP8AdgACEwESAf8CEwESAf8DOQF9/wD/AHYAAhMBEgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB
+        /wM5AX1sAAQC/wD/AAYAAhMBEgH/AhMBEgH/AzkBfWQAAwQBBQMtAcwDHwHsAyYBOv8A/wACAAITARIB
+        /wITARIB/wM5AX1kAAMPARMCFgEVAfsCEwESAf8CHAEbAfADJAE3/wD9AAITARIB/wITARIB/wM5AX1o
+        AAM1AWMCFQEUAf0CEwESAf8CHQEcAe8DJAE1/wD5AAITARIB/wITARIB/wM5AX1sAAM2AWgCFAETAf4C
+        EwESAf8CHwEeAe0DIgEy/wD1AAITARIB/wITARIB/wM5AX1wAAM2AWoCFAETAf4CEwESAf8DHwHsAyEB
+        MP8A8QACEwESAf8CEwESAf8DOQF9dAADNwFtAhQBEwH+AhMBEgH/Ax8B6wMfAS3/AO0AAhMBEgH/AhMB
+        EgH/AzkBfXgAAzcBcAIUARMB/gITARIB/wIfAR4B6gMfASz/AOkAAhMBEgH/AhMBEgH/AzkBfXwAAzgB
+        dQITARIB/wITARIB/wIgAR8B6AMdASn/AOUAAhMBEgH/AhMBEgH/AzkBfRgAAxwBJwMsAUgDLAFIAywB
+        SAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgDLAFIAywB
+        SAMsAUgDLAFIAywBSAMsAUgDLAFIAywBSAMsAUgCNQE0AbcCEwESAf8CEwESAf8CIQEgAeYDHAEn/wDh
+        AAITARIB/wITARIB/wM5AX0UAAMZASICFwEWAfkCEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8DJwHc/wDhAAITARIB/wITARIB/wM5AX0UAAMXAR8CFwEWAfYC
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CKAEnAdj/
+        AOEAAhMBEgH/AhMBEgH/AzkBfRgAAxcBHwMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygB
+        PgMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygBPgMoAT4DKAE+AygB
+        PgMoAT4CNQE0AbcCEwESAf8CEwESAf8CJAEjAeIDGQEi/wDhAAITARIB/wITARIB/wM5AX18AAM5AX8C
+        EwESAf8CEwESAf8CJAEiAeMDGQEj/wDlAAITARIB/wITARIB/wM5AX14AAM5AXsCEwESAf8CEwESAf8C
+        IgEhAeUDGwEm/wDpAAITARIB/wITARIB/wM5AX10AAI5ATgBdwITARIB/wITARIB/wIhASAB5wMcASj/
+        AO0AAhMBEgH/AhMBEgH/AzkBfXAAAzgBcwITARIB/wITARIB/wIgAR8B6AMdASr/APEAAhMBEgH/AhMB
+        EgH/AzkBfWwAAzcBcAIUARMB/gITARIB/wMfAeoDHwEs/wD1AAITARIB/wITARIB/wM5AX1oAAM3AWwC
+        FAETAf4CEwESAf8DHwHrAyABLv8A+QACEwESAf8CEwESAf8DOQF9ZAADDwEUAhUBFAH8AhMBEgH/Ax8B
+        7AMhATD/AP0AAhMBEgH/AhMBEgH/AzkBfWQAAwMBBAMxAcICIwEhAeQDIwEz/wD/AAIAAhMBEgH/AhMB
+        EgH/AzkBff8A/wB2AAITARIB/wITARIB/wM5AX3/AP8AdgACEwESAf8CEwESAf8DOQF9/wD/AHYAAhMB
+        EgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB/wM5AX3/AP8AdgACEwESAf8CEwESAf8DOQF9/wD/
+        AHYAAhMBEgH/AhMBEgH/AzkBff8A/wB2AAITARIB/wITARIB/wMyAb0DOQF9AzkBfQM5AX0DOQF9AzkB
+        fQM5AX0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AzkBfQM5AX0DOQF9AyYBOv8A/wAyAAITARIB
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB
+        /wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wITARIB/wIcARsB8P8A/wAy
+        AAM3AaoCEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8C
+        EwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8CEwESAf8DNwGq/wD/
+        ADIAAUIBTQE+BwABPgMAASgDAAGgAwABKAMAAQEBAAEBBQABIAEDFgAD/wMAAQ8C/xEAAQ8C/xEAAQ8C
+        /w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8E/w8AAR8C/wH9Af8PAAEfAv8B8AH/DwAB
+        HwL/AfABfw8AAR8C/wH4AT8PAAEfAv8B/AEfDwABHwL/Af4BDw8AAR8D/wEHDwABHwP/AYMPAAEfA/8B
+        wQ8AAR8BgBIAAR8TAAEfEwABHwGAEgABHwP/AcEPAAEfA/8Bgw8AAR8D/wEHDwABHwL/Af4BDw8AAR8C
+        /wH8AR8PAAEfAv8B+AE/DwABHwL/AfABfw8AAR8C/wHwAf8PAAEfBP8PAAEfBP8PAAEfBP8PAAEfBP8P
+        AAEfBP8PAAEfBP8PAAEfBP8RAAEPAv8RAAEPAv8RAAEPAv8PAAs=
+</value>
+  </data>
 </root>
