--- a/MusteriKayit.resx
+++ b/MusteriKayit.resx
@@ -117,4 +117,121 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ımageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="ımageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAGBkAAAJNU0Z0AUkBTAIBAQIB
+        AAEIAQABCAEAASgBAAEoAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABoAMAASgDAAEBAQABIAYAAWQa
+        AAMtAUgDLwG6AxkB3wMWAesDEwHrAxEB7QMQAfQDDgH0Aw0B9AMMAfQDCwH0AwoB9AMKAfQDCQH0AwgB
+        9QMKAf8DCgH/AwkB/wMJAf8DCgH/AwoB/wMIAfUDCQH0AwoB9AMKAfQDCwH0AwwB9AMNAfQDDgH0AxAB
+        9AMRAe0DEwHrAxYB6wMZAd8DLwG6Ay0BR/8A7QADOgGHAwEB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAQH+AzoB
+        g/8A5QADMAFQAwAB/wMAAf8DCwH0AzQBqQM2AZADFQHkAwAB/wMWAegDNQGNAzUBjQM1AY0DNQGNAzUB
+        jQM1AY0DNQGNAzUBjQM1AY0DNQGNAzUBjQM1AY0DNQGNAzUBjQM1AY0DNQGNAzUBjQM1AY0DNQGNAzUB
+        jQM1AY0DNQGNAxYB6AMAAf8DFQHkAzUBjgM1AagDCwH1AwAB/wMAAf8DLgFL/wDhAAMqAcUDAAH/Aw0B
+        8wMhAS4IAAMoAcIDAAH/AywBy1gAAywBywMAAf8DKAHCCAADHQEpAwwB8wMAAf8DKwHE/wDhAAMUAewD
+        AAH/AzQBmAwAAygBwgMAAf8DLAHLWAADLAHLAwAB/wMoAcIMAAM1AZoDAAH/AxQB7P8A4QADCwH1AwAB
+        /wM1AY8MAAMpAcIDAAH/AywBy1gAAywBywMAAf8DKQHCDAADNQGPAwAB/wMLAfb/AOEAAwgB/wMAAf8D
+        NQGPDAADKgHCAwAB/wMrAcwMAAMTARoDNQGnAy8BtAMuAbYDLQG2Ay0BtgMtAbYDLQG2Ay4BtgMuAbYD
+        LgG2Ay4BsQMvAbEDMwGxAzUBoAMVARwMAAMrAcwDAAH/AyoBwgwAAzUBjwMAAf8DCAH//wDhAAMFAf8D
+        AAH/AzUBjwwAAyoBwgMAAf8DLAHLDAADOAF6AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DNQFxDAADLAHLAwAB/wMqAcIMAAM1AY8DAAH/AwUB//8A4QAD
+        AwH/AwAB/wM1AY8MAAMqAcIDAAH/AysBzAwAAxoBJAMxAbcDKAHHAyUBxwMkAccDJAHIAyQBxwMkAccD
+        JQHHAyUBxwMnAccDKAHHAysBxwMuAccDLwGvAxkBIgwAAysBzAMAAf8DKgHCDAADNQGPAwAB/wMDAf8c
+        AAMlATsDNAF2Ay4BUgMxAZ8DNAGKAxUBHQQAAwYBCAM1AXgDMQGjAzQBdgMyAWUDKgFFBAADBwEJAzQB
+        bgMxAaIDNAGNAx8BLQQAAzIBYAMuAVIEAAMOARIDNAGQAyMBNf8AXQADAgH/AwAB/wM1AY8MAAMqAcID
+        AAH/AywBy1gAAywBywMAAf8DKgHCDAADNQGNAwAB/wMBAf8cAAMzAWcDAwH7AzMBlwMsAUoDMwGXAxEB
+        6AMSARgDNQF/Ax8B0QMpAUMDMQFeAwsB8QM1AXgEAgMnAcEDJAHHAy8BVgMzAWoDLwGpBAIDMAGnAzMB
+        kwQCAysBtgMqAboDAgED/wBdAAMBAf8DAAH/AzUBjwwAAysBwgMAAf8DKwHMWAADKwHMAwAB/wMrAcIM
+        AAM1AY0DAAH/AwEB/xwAAzMBZwMbAdgEAQgAAx4B0gMzAWgDNAFtAxsB2gMxAV8DLwFXAx4B0wM1AXgD
+        IAEvAwIB/QMPARQQAAMwAacDBgH4AywBswMXAd8DDwEU/wBhAAMBAf8DAAH/AzUBjwwAAywBwgMAAf8D
+        LAHLWAADLAHLAwAB/wMsAcIMAAM1AY0DAAH/AwEB/xwAAzMBZwMTAeYDBwEJBAADBgEHAxUB4gMxAV4E
+        AAMjATYDMgFhAzIBZQMcAdcDNQF3AxgBIQMCAf0DGwEnCAADAwEEBAADMAGnAycBwQMOAe0DNQGF/wBo
+        AAH/AwAB/wM1AY8MAAMsAcIDAAH/AysBzAwAAwYBBwM2AWkDNgF3AzYBeQM2AXkDNgF5AzYBeQM2AXkD
+        NgF5AzYBeQM1AXcDNgF3AzgBdwM6AXcDNAFiAwYBBwwAAysBzAMAAf8DLAHCDAADNgGNAwAB/wMAAf8c
+        AAMzAWcDEAHrAygBvwM1AYMDIgHLAyQByAMIAQoDBwEJAykBuwM1AYMDNQGFAwoB8wMlATsEAAM1AYMD
+        EAHpAzMBlwMuAa0DKAG/BAADMAGnAzQBjgMeASsDFgHhAzUBfv8AZAAB/wMAAf8DNQGPDAADLgHCAwAB
+        /wMsAcsMAAM4AXQDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wM0AWoMAAMsAcsDAAH/Ay4BwgwAAzYBjQMAAf8DAAH/HAADMwFnAyIBzAMXASADMgFjAywB
+        SwMEAQUIAAMSARgDMAFaAzIBYwMbASYMAAMdASoDMgFiAzABWQMOARIEAAMwAacDNAGOBAADFAEbAy8B
+        VQMPART/AGAAAf8DAAH/AzUBjwwAAy4BwgMAAf8DKwHMDAADKQE/AxIB8gMDAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwIB/wMDAf8DBgH/AwsB/wMTAewDKAE+DAADKwHMAwAB/wMuAcIMAAM2AY0D
+        AAH/AwAB/xwAAzMBZwMiAcxIAAMwAacDNAGO/wBwAAH/AwAB/wM1AY8MAAMuAcIDAAH/AywByxAABAED
+        AgEDAwIBAwMCAQMDAgEDAwIBAwMCAQMDAgEDAwIBAwMCAQMDAgEDAwIBAwMCAQMUAAMsAcsDAAH/Ay4B
+        wgwAAzcBjQMAAf8DAAH/HAADFQEcAyQBOCAAAwIBAwMaASQDJwE/AykBQwMjATUDDgESEAADHwEuAxsB
+        J/8AcAAB/wMAAf8DNQGPDAADMQHCAwAB/wMrAcxYAAMrAcwDAAH/AzEBwgwAAzcBjQMAAf8DAAH/OAAE
+        AgMtAU8DLgGuAwsB8QMAAf8DAAH/AwAB/wMAAf8DAQH+AxwB1wM1AYYDFwEg/wB8AAH/AwAB/wM1AY8M
+        AAMtAbYDAAH/AywBy1gAAywBywMAAf8DLQG2DAADOAGNAwAB/wMAAf80AAMlATkDIAHQAwAB/wMAAf8D
+        CgHyAykBvAMyAZwDMwGWAzABpwMeAdQDAQH+AwAB/wMEAfoDNAGPAwkBC/8AdAAB/wMAAf8DNQGPDAAD
+        LQGzAwAB/wMjAdgDJwE9AycBPQMnAT0DJwE9AycBPQMnAT0DJwE9AycBPQMnAT0DJwE9AycBPQMnAT0D
+        JwE9AycBPQMnAT0DJwE9AycBPQMnAT0DJwE9AycBPQMnAT0DJwE9AyMB2AMAAf8DLQGzDAADOAGNAwAB
+        /wMAAf8wAAMzAWoDAwH7AwAB/wMhAc4DLgFUAwYBBxQAAxYBHwM0AYgDCAH1AwAB/wMeAdMDFQEd/wBw
+        AAH/AwAB/wM1AY8MAAMvAbIDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMvAbIMAAM4AY0DAAH/AwAB/ywAAzIBZQMBAf4DAQH+AzUBfgMCAQMMAAMGAQgUAAMaASQDIAHQAwAB
+        /wMaAdsDDwEU/wBsAAH/AwAB/wM1AY8MAAM3AZQDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wM3AZQMAAM4AY0DAAH/AwAB/ygAAx4BKwMGAfgDAAH/AzQBbRAAAzQBcAMEAfoD
+        NAGUFAADDAEQAx8B0QMAAf8DLQGv/wBsAAH/AwAB/wM1AY8MAAMGAQcDKAE9AycBPQMnAT0DJwE9AycB
+        PQMnAT0DJwE9AycBPQMnAT0DJwE9AycBPQMnAT0DJwE9AycBPQMnAT0DJwE9AycBPQMnAT0DJwE9AycB
+        PQMnAT0DJwE9AycBPQMnAT0DJwE9AygBPQMGAQcMAAM5AY0DAAH/AwAB/ygAAy0BsgMAAf8DLwGsDAAD
+        AwEEAzMBkwMAAf8DAgH9AzMBZxgAAxwBKAMFAfkDAAH/AycBPv8AaAAB/wMAAf8DNQGPiAADOQGNAwAB
+        /wMAAf8kAAMUARsDAgH9AwAB/wMcASkIAAMKAQ0DKwG1AwAB/wMIAfUDLgFTIAADMgGeAwAB/wMxAaP/
+        AGgAAf8DAAH/AzUBj4gAAzoBjQMAAf8DAAH/JAADMAFZAwAB/wMdAdYIAAMVARwDIAHPAwAB/wMRAegD
+        IwE2JAADLAFMAwAB/wMUAeP/AGgAAf8DAAH/AzUBjxgAAwIBAwMCAQMDAgEDAwIBAwMCAQMDAgEDAwIB
+        AwMCAQMDAgEDAwIBAwMCAQMDAgEDAwIBAwMCAQMDAgEDAwIBAwMCAQMsAAM6AY0DAAH/AwAB/yQAAzUB
+        eAMAAf8DLQGvBAADDgESAxQB5AMAAf8DAAH/AwUB+QMKAfIDCgHyAwoB8gMKAfIDCgHyAwoB8gMKAfID
+        CwHxAzUBfAQAAxoBJQMAAf8DAgH8AwYBB/8AZAAB/wMAAf8DNQGPDAADNwFxAxAB7QMOAe8DDwH/Aw0B
+        /wMMAf8DDAH/AwsB/wMLAf8DCwH/AwsB/wMLAf8DCwH/AwsB/wMLAf8DCwH/AwwB/wMMAf8DDQH/Aw8B
+        /wMOAe8DEAHtAzgBdCAAAzoBjQMAAf8DAAH/JAADNQF3AwAB/wMtAbAEAAMMAQ8DGgHbAwAB/wMAAf8D
+        CgHzAxQB5QMUAeUDFAHlAxQB5QMUAeUDFAHlAxQB5QMUAeMDNAFxBAADGwEmAwAB/wMDAfsDBQEG/wBk
+        AAH/AwAB/wM1AY8MAAMvAbIDAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DLgG3IAADOgGNAwAB/wMAAf8k
+        AAMvAVYDAAH/AxsB2ggAAxABFQMmAcQDAAH/Aw0B7gMoAUIkAAMtAU8DAAH/AxcB4P8AaAAB/wMAAf8D
+        NQGPDAADLAG0AwAB/wMZAeQDNQF5AzUBeQM1AXkDNQF5AzUBeQM1AXkDNQF5AzUBeQM1AXkDNQF5AzUB
+        eQM1AXkDNQF5AzUBeQM1AXkDNQF5AzUBeQMYAd8DAAH/AysBuCAAAzsBjQMAAf8DAAH/JAADEQEXAwIB
+        /AMAAf8DIAEwCAADBgEIAzABpwMAAf8DBQH5AzIBYSAAAzABpQMAAf8DMgGe/wBlAAMBAf8DAAH/AzUB
+        jwwAAzABwgMAAf8DLAHLRAADKAHCAwAB/wMrAbggAAM7AY0DAAH/AwAB/ygAAy8BqwMAAf8DKwG2BAEI
+        AAQBAzUBhAMAAf8DAQH+AzQBchgAAyABMAMDAfsDAAH/AyQBN/8AZQADAQH/AwAB/wM1AY8MAAMuAcID
+        AAH/AysBzDAAAwIBAwMGAQgEAggAAygBwgMAAf8DKwG4IAADOwGNAwAB/wMAAf8oAAMaASUDCQH0AwAB
+        /wM1AXsQAAMyAWEDCwHwAzUBiRQAAxEBFgMaAdkDAAH/AzABpP8AaQADAgH/AwAB/wM1AY8MAAMuAcID
+        AAH/AywByzAAAzMBtwMCAf0DMQGxCAADKAHCAwAB/wMrAbgcAAMSARgDHwHZAwAB/wMAAf8sAAMwAVkD
+        AgH9AwAB/wM0AY0DBgEHDAAEARQAAyABLwMbAdoDAAH/Ax4B0gMMAQ//AGkAAwMB/wMAAf8DNQGPDAAD
+        LAHCAwAB/wMrAcwwAAMrAcwDAAH/AygBwggAAygBwgMAAf8DKgG6GAADFQEcAyAB2AMAAf8DAAH/AzQB
+        njAAAzEBXAMHAfcDAAH/AxsB2gMyAWMDCwEOFAADHwEuAzMBmAMEAfoDAAH/AyQByAMRARb/AG0AAwUB
+        /wMAAf8DNQGPDAADKwHCAwAB/wMsAcswAAMsAcsDAAH/AygBwggAAygBwgMAAf8DMQHLFAADEgEYAyAB
+        2AMAAf8DAAH/AzYBowMCAQM0AAMfAS0DJgHDAwAB/wMAAf8DBQH5AyIBywMvAaoDMQGjAysBtgMUAeMD
+        AAH/AwAB/wMIAfUDNQGAAwUBBv8AcQADCAH/AwAB/wM1AY8MAAMqAcIDAAH/AysBzDAAAysBzAMAAf8D
+        KAHCCAADKAHCAwAB/wMwAcwQAAMVARwDIAHYAwAB/wMAAf8DNAGdAwIBA0AAAygBQQMyAaADFAHlAwAB
+        /wMAAf8DAAH/AwAB/wMEAfoDIwHJAzUBdwMRARb/AHkAAwsB9QMAAf8DNQGPDAADKgHCAwAB/wMsAcsw
+        AAM1AbMDBwH3AzIBqggAAygBwgMAAf8DMAHLDAADEwEZAyAB2AMAAf8DAAH/AzYBogMCAQNMAAQBAxEB
+        FgMgATADIwE2AxsBJgMGAQj/AIUAAxQB7AMAAf8DNAGYDAADKQHCAwAB/wMsActEAAMoAcIDAAH/Ay0B
+        ywgAAxUBHAMfAdkDAAH/AwAB/wM1AZwEAv8A7QADKgHGAwAB/wMOAfEDHQEpCAADKAHCAwAB/wMsActE
+        AAMoAcIDAAH/Ay0BywQAAxMBGQMfAdkDAAH/AwAB/wM2AaEEAv8A8QADMAFQAwEB/wMAAf8DDAHzAzUB
+        ogM1AY0DFQHkAwAB/wMWAegDNQGNAzUBjQM1AY0DNQGNAzUBjQM1AY0DNQGNAzUBjQM1AY0DNQGNAzUB
+        jQM1AY0DNQGNAzUBjQM1AY0DNQGNAzUBjQMVAeQDAAH/AxYB6AM1AY0DHgHaAwAB/wMAAf8DNQGbBAL/
+        APkAAzsBigMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8D
+        AAH/AwAB/wM2AaEEAv8A/wACAAMsAUgDLQG+AxcB5wMRAe4DDwH0Aw0B9AMMAfQDCwH0AwsB9AMLAfQD
+        CgH0AwoB9AMKAfQDCgH0AwoB9AMKAfQDCgH0AwkB9AMJAfQDCQH0AwkB9AMJAfQDCQH8AwoB/wMKAf8D
+        CgH/AwoB/wMKAf8DCgH/AzYBmgQC/wD9AAFCAU0BPgcAAT4DAAEoAwABoAMAASgDAAEBAQABAQUAASAB
+        AxYAA/8BAAHAAwABAwX/CgABgAMAAQEF/w8ABf8KAAEMAX8B/wH+ATAF/woAARwBfwH/Af4BOAX/CgAB
+        HAF/Af8B/gE4Bf8KAAEcAXABAAEOATgF/woAARwBcAEAAQ4BOAX/CgABHAFwAQABDgE4Af4BBAEIASQB
+        fwoAARwBfwH/Af4BOAH+AwABfwoAARwBfwH/Af4BOAH+ATABAQHgAf8KAAEcAX8B/wH+ATgB/gEiAQEB
+        oQH/CgABHAFwAQABDgE4Af4BAAEIASAB/woAARwBcAEAAQ4BOAH+AQYBHAEkAX8KAAEcAXABAAEOATgB
+        /gF/Af8B5wH/CgABHAF4AQABPgE4Af4BfwGBAecB/woAARwBfwH/Af4BOAH/AfwBAAE/Af8KAAEcAX8B
+        /wH+ATgB/wH4AQABDwH/CgABHAMAATgB/wHwAT4BBwH/CgABHAMAATgB/wHgAe8BgwH/CgABHAMAATgB
+        /wHDAccBwwH/CgABHAMAATgB/wHHAQcB4QH/CgABHwP/AfgB/wGGAQ8B8QH/CgABHwP/AfgB/wGMAR8B
+        8QH/CgABHwGAAQABPwH4Af8BiAEAARAB/woAARwCAAEHAfgB/wGIAQABEAH/CgABHAIAAQcB+AH/AYwB
+        HwHxAf8KAAEcAgABBwH4Af8BhgEPAfEB/woAARwBfwH/AccB+AH/AcMBBwHhAf8KAAEcAX8B+AHHAfgB
+        /wHDAccBwwH/CgABHAF/AfgBxwHwAf8B4AHvAYMB/woAARwBfwH4AccB4AH/AfABPgEHAf8KAAEcAX8B
+        +AHHAcAB/wH4AQABDwH/CgABHAF/AfgBxwGBAf8B/gEAAT8B/woAARwBfwH4AccBAwL/AYEC/woAARwB
+        fwH/AcYBBwX/CgABDAF/Af8BxAEPBf8OAAEfBf8KAAGAAwABPwX/CgABwAMAAX8F/woACw==
+</value>
+  </data>
 </root>
